Update IP address and fix Arabic page rendering

--- a/error.html
+++ b/error.html
@@ -7,6 +7,6 @@
 
 <body>
     <h1 style="color: red;">The file is not found</h1>
-    <p><b>Eyas Shalhoub 1201681 <br> Maan Naser 1201575 <br> Yaqeen Issa 1201576</b></p>
+    <p><b>Hanna Abudayeh-1200085<br>Eyass Mahsaqi-1200640<br>Yousef Isaifan-1193102</b></p>
 </body>
 </html>
