--- a/error.html
+++ b/error.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Error 404</title>
+    <link rel="stylesheet" href="login.css">
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=103174&format=png" type="image/x-icon" />
+
 </head>
 
 <body>
+    <div id="logi">
     <h1 style="color: red;">The file is not found</h1>
     <p><b>Hanna Abudayeh-1200085<br>Eyass Mahsaqi-1200640<br>Yousef Isaifan-1193102</b></p>
+    </div>
 </body>
 </html>
