--- a/main_ar.html
+++ b/main_ar.html
@@ -3,29 +3,26 @@
 <head>
 <meta name="description" content="Arabic page"/>
 <meta charset="UTF-8"/>
-<link rel="stylesheet" href="main_ar.css">
+<link rel="stylesheet" href="login.css">
+<link rel="icon" href="https://img.icons8.com/?size=96&id=WPJa2cfHhKez&format=png" type="image/x-icon" />
+
 <title>سيرفر صغير في مساق شبكات الحاسوب</title>
 </head>
 <body>
-    <div class="header">
-        <div class="navBar">
-            <ul>
-                <li><img class="bzu" src="./bzu.png" alt="BZUlogo" width="80px">
-                </li>
-                <li><a class="home" href="main_en.html" title="هذا الرابط ينقلك إلى صفحة باللغة الإنجليزية" target="_blank">الإنجليزية</a></li>
-                <li><a class="about" href="#" title="هذا الرابط ينقلك لتتعرف على الفريق">عن الفريق</a></li>
-            </ul>
-        </div>
-        <br><br><br>
-        <div class="desc"><p class="welcome">أهلاً بكم في مساق <span class="CourseName">شبكات الحاسوب<br> هذه سيرفر صغير </span></p>
+    <div>
+        <div class="container"> 
+            <img src="./bzu.png" alt="BZUlogo" width="110px">
+            <a href="main_en.html" target="_blank"><button class="sub">الإنجليزية</button></a>
+            <a href="main_en.html" target="_blank"><button class="sub">عن الفريق</button></a>
         </div>
         <br>
+        <div id="logi">
+            <p class="tt">أهلاً بكم في مساق <span class="blue">شبكات الحاسوب<br> هذه سيرفر صغير </span></p>
+        </div>
         <br><br>
-        <br>
-        <dl class="Names">
-            <dt class="group">من نحن؟</dt>
-            <dd><span class="eyas"> اياس شلهوب 1201681 </span><br> <span class="maan">معن ناصر 1201575</span><br><span class="yaqeen">
-                يقين عيسى  1201576</span></dd>
+        <dl id="logi">
+            <dt>اعضاء الفريق:</dt>
+            <dd><span>حنا ابودية-1200085</span><br> <span>اياس مشاقي-1200640</span><br><span>يوسف اسعفان-1193102</span></dd>
         </dl>
         <br><br><br>
     </div>
