--- a/main_en.html
+++ b/main_en.html
@@ -3,37 +3,34 @@
 <head>
 <meta name="description" content="This is our English version page for Network course project"/>
 <meta charset="UTF-8"/>
-<!--To make a proper mobile view-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="login.css">
+<link rel="icon" href="https://img.icons8.com/?size=96&id=WPJa2cfHhKez&format=png" type="image/x-icon" />
 <title>ENCS3320 My Tiny WebServer</title>
 </head>
+
 <body>
-<div class="header">
+<div>
     <div class="container">
-            <img class="bzu" src="./bzu.png" alt="BZUlogo" width="110px">
+            <img src="./bzu.png" alt="BZUlogo" width="110px">
             <a href="main_ar.html" target="_blank"><button class="sub">Arabic</button></a>
-            <a class="sub" href="https://www.w3schools.com/python/gloss_python_multi_line_strings.asp" 
-                title="Link to learn you about multiline strings" target="_blank"><button class="sub">QQQQQ</button></a>
+            <a class="sub" href="https://www.w3schools.com/python/python_strings.asp" 
+                title="Link to learn you about multiline strings" target="_blank"><button class="sub">Python Strings</button></a>
     </div>
-    <br><br>
+    <br>
     <div id="logi">
-        <p class="welcome">Welcome to our course <span class="CourseName">Computer Networks, This is a tiny Webserver </span> </p>
+        <p class="tt">Welcome to our course <span class="blue">Computer Networks, This is a tiny Webserver </span> </p>
     </div>
 
-    <br><br><br>
+    <br><br>
     <dl id="logi">
-        <dt>Group members</dt>
+        <dt>Group members:</dt>
         <dd><span>Hanna Abudayeh-1200085</span><br> <span>Eyass Mahsaqi-1200640</span> <br><span>Yousef Isaifan-1193102</span></dd>
     </dl>
-    <br><br><br><br><br><br>
 </div>
-<div class="boxes" id="Box">
-    <p class="title"><span class="circle">&SmallCircle;</span>About Us</p>
-    <br><br>
-    <div class="box1">
-        <p class="name">Hanna Abudayeh-1200085</p>
-            <Table>
+<div  id="us">
+    <div id="login">
+        <p>Hanna Abudayeh-1200085</p>
+            <Table id="table">
             <thead>
                 <tr>
                     <th>Skills</th>
@@ -59,34 +56,22 @@
                     <td>Database Project</td>
                 </tr>
                 <tr>
-                    <td>8086 Assembly</td>
+                    <td>HTML5</td>
                     <td>Movies</td>
                     <td>Java Project</td>
                 </tr>
                 <tr>
                     <td>Computer Skills</td>
                     <td>tv Shows</td>
-                    <td>Data Structure Project</td>
-
-                </tr>
-                <tr>
-                    <td>CSS3</td>
-                    <td></td>
                     <td>Web development projects</td>
-                </tr>
-                <tr>
-                    <td>HTML5</td>
-                </tr>
-                <tr>
-                    <td>Teamwork</td>                   
+
                 </tr>
             </tbody>
             </Table>
     </div>
-    <br><br><br>
-    <div class="box2">
-        <p class="name">Eyass Mahsaqi-1200640</p>
-            <Table>
+    <div id="login">
+        <p>Eyass Mahsaqi-1200640</p>
+            <Table id="table">
             <thead>
                 <tr>
                     <th>Skills</th>
@@ -97,12 +82,12 @@
             <tbody>
                 <tr>
                     <td>C, Java, Javafx</td>
-                    <td>Shopping</td>
+                    <td>Football</td>
                     <td>Database Project</td>
                 </tr>
                 <tr>
-                    <td>Effective communication</td>
-                    <td>waste time look for new hobbies</td>
+                    <td>Teamwork</td>
+                    <td>Movies</td>
                     <td>Data Structure Project</td>
                 </tr>
                 <tr>
@@ -116,18 +101,16 @@
                     <td>Java Project</td>
                 </tr>
                 <tr>
-                    <td>Android</td>                  
-                </tr>
-                <tr>
-                    <td>Teamwork</td>
+                    <td>Android</td>
+                    <td>Video Editing</td>
+                    <td>Algorithm Project</td>           
                 </tr>
             </tbody>
             </Table>   
     </div>
-    <br><br><br>
-    <div class="box3">
-        <p class="name">Yousef Isaifan-1193102</p>
-            <Table>
+    <div id="login">
+        <p>Yousef Isaifan-1193102</p>
+            <Table id="table">
             <thead>
                 <tr>
                     <th>Skills</th>
@@ -153,24 +136,25 @@
                 </tr>
                 <tr>
                     <td>Good documenting skills</td>
-                    <td></td>
+                    <td>TV Shows</td>
                     <td>Java Project</td>
                 </tr>
                 <tr>
-                    <td>8086 Assembly</td>
-                    <td></td>
-                    <td>Data Structure Project</td>
-                </tr>
-                <tr>
-                    <td>Computer Skills</td> 
-                </tr>
-                <tr>
-                    <td>Ability to tolerate stress to the team</td>
+                    <td>Computer Skills</td>
+                    <td>Swimming</td>
+                    <td>Algorithm Project</td>
                 </tr>
             </tbody>
             </Table>
     </div>
 </div>
+<div id="logi">
+    <label >what is Content-Type in the HTTP request and why do we need it?</label><br>
+    <label >The media type of the resource enclosed in the request message body is indicated by the Content-Type
+     header. It describes the media in the HTTP message body, including its type and, in certain situations, its subtype. For the client and the server to correctly 
+    interpret the HTTP message's payload, the Content-Type header is essential.</label>
+</div>
+
 
 </body>
 </html>
